@@ -1,5 +1,5 @@
 /*
- * "$Id: classes.c,v 1.18.2.10 2003/11/07 19:45:05 mike Exp $"
+ * "$Id: classes.c,v 1.18.2.11 2004/02/25 21:57:06 mike Exp $"
  *
  *   Class status CGI for the Common UNIX Printing System (CUPS).
  *
@@ -133,7 +133,7 @@ main(int  argc,				/* I - Number of command-line arguments */
 
         cgiSetVariable("DEFAULT_URI",
 	               ippRewriteURL(attr->values[0].string.text,
-		                     url, sizeof(url)));
+		                     url, sizeof(url), NULL));
       }
 
       ippDelete(response);
@@ -342,5 +342,5 @@ main(int  argc,				/* I - Number of command-line arguments */
 
 
 /*
- * End of "$Id: classes.c,v 1.18.2.10 2003/11/07 19:45:05 mike Exp $".
+ * End of "$Id: classes.c,v 1.18.2.11 2004/02/25 21:57:06 mike Exp $".
  */
