@@ -3,6 +3,9 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.21rc1
 
+	- The web interface did not redirect administration
+	  tasks to the primary server for a class or printer
+	  (STR #491)
 	- The cups-lpd mini-daemon did not reject print jobs to
 	  queues that were rejecting new print jobs (STR #515)
 	- Some calls to the ctype functions did not account for
